Fix news block spacing.

--- a/web/themes/custom/themekit/sass/components/_blocks.scss
+++ b/web/themes/custom/themekit/sass/components/_blocks.scss
@@ -30,6 +30,9 @@
 .block-views-blockblog-post-listings-block-2 {
   background-color: $white;
   position: relative;
+  @include top-bottom(padding, 80px);
+  @include content-width(content);
+
   &:before {
     content: '';
     position: absolute;
