--- a/web/themes/custom/themekit/sass/paragraphs/_reference.scss
+++ b/web/themes/custom/themekit/sass/paragraphs/_reference.scss
@@ -4,7 +4,6 @@
 
 .paragraph--type--reference-block {
   text-align: left;
-  padding: px-to-percent(80px, 1000px) px-to-percent(115px, 1000px);
 
   .field--name-field-heading {
     font-size: rem-calc(32);
